<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_item_meeting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_margin="2dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card_view"
        android:layout_width="@dimen/size_cardview"
        android:layout_height="@dimen/size_cardview"
        android:layout_marginStart="@dimen/margin_cardview"
        android:layout_marginTop="@dimen/margin_cardview"
        android:layout_marginBottom="@dimen/margin_cardview"
        android:elevation="@dimen/elevation_cardview"
        app:cardCornerRadius="@dimen/corner_radius_cardview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_icone_meeting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/item_subject_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_subject"
        android:layout_marginBottom="@dimen/margin_bottom_item"
        android:text="@string/subject_meeting"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_meeting"
        app:layout_constraintBottom_toBottomOf="@+id/item_card_view"
        app:layout_constraintStart_toEndOf="@+id/item_card_view"
        app:layout_constraintTop_toTopOf="@+id/item_card_view"
        android:ellipsize="end"
        android:maxLines="1"
        android:maxWidth="@dimen/max_with_subject"
        />


    <TextView
        android:id="@+id/item_date_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_date"
        android:layout_marginBottom="@dimen/margin_bottom_item"
        android:text="00h00 00/00"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_meeting"
        app:layout_constraintBottom_toBottomOf="@+id/item_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_card_view" />

    <TextView
        android:id="@+id/item_room_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_item"
        android:layout_marginEnd="@dimen/margin_end_room"
        android:text="@string/room_meeting"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_meeting"
        app:layout_constraintBottom_toBottomOf="@+id/item_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_card_view"
        />

    <TextView
        android:id="@+id/item_participant_meeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_item"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/participants_meeting"
        android:textSize="@dimen/text_size_meeting"
        app:layout_constraintBottom_toBottomOf="@+id/item_card_view"
        app:layout_constraintEnd_toEndOf="@+id/item_room_meeting"
        app:layout_constraintStart_toStartOf="@+id/item_subject_meeting"
        app:layout_constraintTop_toBottomOf="@+id/item_subject_meeting"
 />

    <ImageButton
        android:id="@+id/item_list_delete_meeting_button"
        android:layout_width="@dimen/delete_btn_size"
        android:layout_height="@dimen/delete_btn_size"
        android:layout_marginEnd="@dimen/margin_cardview"
        android:background="@null"
        android:src="@drawable/ic_delete_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>