<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.ListMeetingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_meeting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/margin_float_btn"
        android:layout_marginBottom="@dimen/margin_float_btn"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/white"
        app:backgroundTint="@color/red" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_meeting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_recycler_view"
        android:scrollbars="vertical"
        android:background="@color/gray"
        android:layout_below="@+id/toolbar"
        />

</RelativeLayout>